# digital_reporter

./: .dockerignore  .env-dev  .env-production  .env-staging  .env-test  .gitignore  Dockerfile  README.md  config.ini  config.py  docker-compose.develop.yml  prestart-nginx-uwsgi.sh  pyproject.toml  wsgi.py
conf-cron/: uwsgi-cron-header.sh  uwsgi-reporter-cron.sh
conf-webserver/: nginx-build-conf-service.sh  nginx-build-conf.sh  uwsgi-build-ini.sh
cron/: cron_run_reporter.py
digital_reporter/: __init__.py  custom_exceptions.py  enumstore.py
digital_reporter/modules/api/: health_check.py
digital_reporter/modules/db/: models.py
digital_reporter/modules/db/managers/: MySQL.py
digital_reporter/modules/models/: scraper.py
digital_reporter/modules/notifications/: slack.py
digital_reporter/modules/parsers/: base_parser.py  constants.py  default_parser.py
digital_reporter/modules/scraper/: base.py  drivers.py
digital_reporter/modules/scraper/models/: scraper.py
digital_reporter/modules/utilities/configurations/: configuration_manager.py  set_conf_env.py
digital_reporter/modules/utilities/mysql/new_configurations/: new_rss_source.py
migrations/versions/: 45a1208cb4f1_initial_migration.py
tests/: test_digital_reporter.py
