[tool.poetry]
name = "digital_reporter"
version = "0.1.0"
description = ""
authors = ["Asif <asif@zestmoney.in>"]

[tool.poetry.dependencies]
python = "^3.7"
selenium = "^3.141.0"
requests = "^2.23.0"
feedparser = "^5.2.1"
sqlalchemy = "^1.3.17"
mysql-connector-python = "^8.0.20"
webdriver-manager = "^2.5.2"
flask-sqlalchemy = "^2.4.3"
flask-migrate = "^2.5.3"
pymysql = "^0.9.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
